2000-10-11  Pavel Roskin  <proski@gnu.org>

	* tests/atgeneral.m4 (AT_CHECK): Make sure that $? is set to 0
	if diffs have succeded.

2000-10-11  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_COMPILE_IFELSE, _AC_LINK_IFELSE)
	(_AC_RUN_IFELSE): New macros which are the former
	AC_COMPILE_IFELSE etc. without AC_LANG_COMPILER_REQUIRE.
	(AC_COMPILE_IFELSE, AC_LINK_IFELSE, AC_RUN_IFELSE): Use them.

2000-10-11  Morten Eriksen <mortene@sim.no>

	* acgeneral.m4 (AC_RUN_IFELSE): Add missing executable suffix.
	* aclang.m4 (_AC_LANG_COMPILER_WORKS): Likewise.
	* aclang.m4 (AC_PROG_CC_C_O, AC_PROG_F77_C_O): Fix typos where
	$objext were used instead of $ac_objext.

2000-10-05  Akim Demaille  <akim@epita.fr>

	Check that updated scripts are valid scripts.

	* tests/mktests.sh: Generate `syntax.m4' directly.
	* tests/macros.m4: Remove.
	Adjust dependencies.
	* tests/mktests.sh: Generate `update.m4' too.
	* tests/update.m4: New generated file.
	Adjust dependencies.
	* tests/atspecific.m4 (AT_CHECK_UPDATE): New macro.

2000-10-05  Akim Demaille  <akim@epita.fr>

	* tests/mktests.sh: New file, which replaces the code inlined in
	Makefile.am.
	* src/Makefile.am (macros.m4): Use `mktests.sh'.
	* tests/suite.m4: Reorder from low level to high level.

2000-10-02  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_LANG_ABBREV, _AC_LANG_ABBREV(C))
	(_AC_LANG_ABBREV(C++), _AC_LANG_ABBREV(Fortran 77): New macros.
	(AC_LANG_(C), AC_LANG_(C++), AC_LANG_(Fortran 77)): Don't define
	AC_LANG_ABBREV.
	(_AC_PROG_PREPROC_WORKS): Adjust.
	* acgeneral.m4 (_AC_TRY_CPP): Likewise.

2000-10-02  Pavel Roskin  <proski@gnu.org>

	* acspecific.m4 (AC_PROG_LEX): Use AC_DEFUN_ONCE.
	(AC_DECL_YYTEXT): Don't use AC_REQUIRE because autoupdate
	would place it into configure.in but it's not allowed
	outside AC_DEFUN.

2000-10-02  Pavel Roskin  <proski@gnu.org>

	* tests/Makefile.am: Macros defined by AC_DEFUN_ONCE should
	go to macros.m4 for testing.

2000-09-28  Pavel Roskin  <proski@gnu.org>
